# Georgy_recognition

./: Download_images.ipynb  Examples.ipynb  README.md  Softmax_model-Copy1.ipynb  Split_images.ipynb  pyproject.toml
tests/: test_georgy_recognition.py
