[tool.poetry]
name = "Georgy-Recognition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
matplotlib = "3.3.2"
numpy = "1.19.2"
tensorflow = "2.1.0"
requests = "2.25.1"
pandas = "1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
